fix(multiselect): fix overflow issue in selectedItemTag

--- a/packages/dropdown/src/components/FieldComponents.scss
+++ b/packages/dropdown/src/components/FieldComponents.scss
@@ -52,6 +52,12 @@
         color: var(--components-dropdown-dropdown-standard-text-disabled);
       }
     }
+
+    &__text {
+      text-wrap: nowrap;
+      text-overflow: ellipsis;
+      overflow-x: hidden;
+    }
   }
 
   // This is done to remove contrast specific styling
